Cleanup gordianknot